2018-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  genAddrOf refactoring.

2018-11-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve code generation for negation.

2018-11-30 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix an issue in shift of large on-stack operands (part of bug #2844).

2018-11-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix an issue in call to function returning struct / union.

2018-11-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix an issue in code generation for subtraction (part of bug #2844).

2018-11-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCmem.c,
	  support/regression/tests/bug-2842.c:
	  Fix bug #2842.

2018-11-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve handling of right subtraction operand in a.

2018-11-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue in right shift.

2018-11-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improvements for previous commit
	* src/SDCCsalloc.hpp:
	  New stack allocator: unaligned Chaitin.

2018-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Slightly more verbose error reporting.

2018-11-18 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  sdccconf_in.h,
	  configure,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/stm8/gen.c:
	  Provide backtrace on some internal errors.

2018-11-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix right shift of literal.

2018-11-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/Makefile.in:
	  Include stm8-large in default target for regression tests.
	* src/stm8/gen.c:
	  Improve code generation for wide negation.

2018-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsalloc.hpp,