@@ -1,3 +1,8 @@
+2018-12-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c:
+	  Peephole function for z88dk, patch from zsdcc fork diff by Phillip Stevens.
+
 2018-12-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
